tests/invalid/wrong_proc_call.lang
proc add(a: i32, b: i32) i32;

proc main() void {
    add(1, c"");
}
